<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="gameViewModel"
            type="com.timo.tictactoe.viewmodel.GameViewModel"/>
    </data>
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="32dp">

        <TextView
            android:id="@+id/cell_00"
            style="@style/CellTextView"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_00"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(0,0)}"
            android:text='@{gameViewModel.cells["00"]}'/>

        <TextView
            android:id="@+id/cell_01"
            style="@style/CellTextView"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_01"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(0,1)}"
            android:text='@{gameViewModel.cells["01"]}'/>

        <TextView
            android:id="@+id/cell_02"
            style="@style/CellTextView"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_02"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(0,2)}"
            android:text='@{gameViewModel.cells["02"]}'/>

        <TextView
            android:id="@+id/cell_10"
            style="@style/CellTextView"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_10"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(1,0)}"
            android:text='@{gameViewModel.cells["10"]}'/>

        <TextView
            android:id="@+id/cell_11"
            style="@style/CellTextView"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_11"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(1,1)}"
            android:text='@{gameViewModel.cells["11"]}'/>

        <TextView
            android:id="@+id/cell_12"
            style="@style/CellTextView"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_12"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(1,2)}"
            android:text='@{gameViewModel.cells["12"]}'/>

        <TextView
            android:id="@+id/cell_20"
            style="@style/CellTextView"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_20"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(2,0)}"
            android:text='@{gameViewModel.cells["20"]}'/>

        <TextView
            android:id="@+id/cell_21"
            style="@style/CellTextView"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_21"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(2,1)}"
            android:text='@{gameViewModel.cells["21"]}'/>

        <TextView
            android:id="@+id/cell_22"
            style="@style/CellTextView"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@drawable/cell_22"
            android:onClick="@{() -> gameViewModel.onClickedCellAt(2,2)}"
            android:text='@{gameViewModel.cells["22"]}'/>
    </GridLayout>
</layout>