<resources>
    <string name="app_name">TicTacToe</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="game_dialog_title">New game</string>
    <string name="done">Done</string>
    <string name="game_dialog_empty_name">Name mustn\'t be empty</string>
    <string name="game_dialog_same_name">Names mustn\'t be the same</string>
    <string name="game_end_dialog_headline">The winner is</string>
    <string name="no_winner">No one</string>
</resources>
